--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,30 +1,20 @@
-# The name of the job workflow
 name: Node.js CI Pipeline | Furqan Hameed
 
-# Specifying when we want run this job
 on:
-	# Run on every push to master branch
     push:
         branches: ["master"]
-	# Run when a PR is created for master branch
     pull_request:
         branches: ["master"]
 
-# The job details
 jobs:
-	# The name of the job
     build:
-		# The server for the job
         runs-on: ubuntu-latest
 
         strategy:
             matrix:
-				# The job will be ran for all these versions
-                node-version: [14.x,18.x]
+                node-version: [14.x, 18.x]
 
-		# The steps of running this job
         steps:
-			# Switching to the branch which made the change
             - uses: actions/checkout@v3
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
@@ -33,20 +23,15 @@ jobs:
                   cache: "npm"
             - run: npm i
             - run: npm run build
-    
-    # The name of the job
+
     test:
-		# The server for the job
         runs-on: ubuntu-latest
 
         strategy:
             matrix:
-				# The job will be ran for all these versions
-                node-version: [14.x,18.x]
+                node-version: [14.x, 18.x]
 
-		# The steps of running this job
         steps:
-			# Switching to the branch which made the change
             - uses: actions/checkout@v3
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
@@ -54,4 +39,4 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   cache: "npm"
             - run: npm i
-            - run: npm run test
+            - run: npm run build
