--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: Node.js CI Pipeline | Furqan Hameed
+name: Node.js CI Deployment | Furqan Hameed
 
 on:
     push:
@@ -19,5 +19,18 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: "npm"
-            - run: pwd
-            - run: ls
+
+			- run: npm i
+            - run: npm run build
+
+            - name: Install SSH Key
+    		  uses: shimataro/ssh-key-action@v2
+			    with:
+                  key: ${{ secrets.SSH_PRIVATE_KEY }} 
+				  known_hosts: unnecessary
+
+			- name: Adding Known Hosts
+    		  run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+					  
+			- name: Deploy with rsync
+			  run: rsync -avz ./dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/zellwk/zellwk.com/dist/
