--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,29 +7,12 @@ on:
         branches: ["master"]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                node-version: [14.x, 18.x]
-
-        steps:
-            - uses: actions/checkout@v3
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
-              with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: "npm"
-            - run: npm i
-            - run: npm run build
-
     test:
         runs-on: ubuntu-latest
 
         strategy:
             matrix:
-                node-version: [14.x, 18.x]
+                node-version: [18.x]
 
         steps:
             - uses: actions/checkout@v3
