--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 name: Node.js CI Deployment | Furqan Hameed
 
 on:
-    push:
+    pull:
         branches: ["master"]
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
                   known_hosts: unnecessary
 
             - name: Adding Known Hosts
-              run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+              run: ssh-keyscan -p ${{ secrets.SSH_PORT}} -H ${{ secrets.SSH_HOST }}  >> ~/.ssh/known_hosts
 
             - name: Deploy with rsync
               run: rsync -avz ./dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/zellwk/zellwk.com/dist/
