--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,7 +29,7 @@ jobs:
                   known_hosts: unnecessary
 
             - name: Adding Known Hosts
-              run: ${{ secrets.SSH_AUTH}} >> ~/.ssh/known_hosts
+              run: echo ${{ secrets.SSH_AUTH}} >> ~/.ssh/known_hosts
 
             - name: Deploy with rsync
               run: rsync -avz ./dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/zellwk/zellwk.com/dist/
